# el15

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  tests.yml
docs/: BACKGROUND_SERVICE.md  BT_PROTOCOL.md  CLI.md  GUI_DESIGN.md  SCPI_PROTOCOL.md  SECURITY.md
el15-app/: Cargo.toml  build.rs  el15.rc
el15-app/locales/: en.json  es.json  hi.json  ru.json  zh.json
el15-app/src/: cli.rs  cli_run.rs  graph.rs  gui.rs  hid_flash.rs  i18n.rs  logging.rs  main.rs  settings.rs  usb.rs
el15-bt/: Cargo.toml
el15-bt/src/: device.rs  error.rs  lib.rs  protocol.rs
el15-scpi/: Cargo.toml
el15-scpi/src/: handlers.rs  lib.rs  server.rs  state.rs
img/: icon_el15.icns
packaging/linux/: 99-el15.rules  README.txt  el15.service.template  install-service.sh  uninstall-service.sh
packaging/macos/: Info.plist.template  README-unsigned.txt  com.el15.daemon.plist.template  create_app_bundle.sh  install-service.sh  uninstall-service.sh
packaging/windows/: README.txt  install-service.bat  uninstall-service.bat
scripts/scpi-test/: Cargo.toml
scripts/scpi-test/src/: main.rs
