[workspace]
members = [
    "el15-bt",
    "el15-scpi",
    "el15-app",
    "scripts/scpi-test",
]
resolver = "2"

[workspace.package]
version = "0.1.2"
edition = "2021"
authors = ["Roman Samarev <samarev@acm.org>"]
license = "MIT"
repository = "https://github.com/rssdev10/el15"
description = "Cross-platform controller for the ALIENTEK EL15 DC electronic load"

[workspace.dependencies]
# Async / runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# Bluetooth LE
btleplug = "0.11"

# USB / DFU (firmware flashing)
nusb = "0.1"
rusb = "0.9"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Serialization / config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
confy = "0.6"
csv = "1.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
chrono = { version = "0.4", features = ["serde", "clock"] }

# Errors
thiserror = "1"
anyhow = "1"

# UUID
uuid = { version = "1", features = ["v4"] }

# i18n
rust-i18n = "3"
sys-locale = "0.3"

# GUI
iced = { version = "0.14", features = ["tokio", "advanced", "canvas", "image"] }

# File picker
rfd = "0.15"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
