[package]
name = "el15-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "EL15 controller — iced GUI by default, CLI with --no-gui"

[[bin]]
name = "el15"
path = "src/main.rs"

[dependencies]
el15-bt = { path = "../el15-bt" }
el15-scpi = { path = "../el15-scpi" }

clap.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
confy.workspace = true
csv.workspace = true
rust-i18n.workspace = true
sys-locale.workspace = true

iced.workspace = true
plotters.workspace = true
plotters-iced.workspace = true
rfd.workspace = true

# USB / DFU
nusb.workspace = true
rusb.workspace = true
